--- a/quickstart/java/redistest/pom.xml
+++ b/quickstart/java/redistest/pom.xml
@@ -20,9 +20,15 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
-      <version>3.8.0</version>
+      <version>3.7.1</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
